fixed overflow for selctor layoutset

--- a/frontend/packages/ux-editor/src/components/Properties/PropertiesHeader/EditLayoutSetForSubform/EditLayoutSet/SelectLayoutSet/SelectLayoutSet.module.css
+++ b/frontend/packages/ux-editor/src/components/Properties/PropertiesHeader/EditLayoutSetForSubform/EditLayoutSet/SelectLayoutSet/SelectLayoutSet.module.css
@@ -1,9 +1,14 @@
 .selectLayoutSet {
-  display: flex;
+  display: grid;
   flex-direction: column;
   gap: var(--fds-spacing-2);
 }
 
 .selectLayoutSetwithPadding {
   padding: 0 var(--fds-spacing-5);
+}
+
+.layoutSetsOption {
+  text-overflow: ellipsis;
+  width: 100%;
 }
